public interface TransportStrategy {
    public String getName();
    public double getCost();
    public double getDistance();
    public int getETA();
}
